fixed up center alignment of resume table and links

--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ body {
 	font-size: 15px;
 	line-height: 5px;
 	text-align: center;
+	padding-left: 0.5%;
 }
 
 .container {
